src/test/deca/context/valid/no_operation.deca
// Description :
// test d'une non opération
//
// Résultats :
// ok

{
  ;
}
