src/test/deca/context/invalid/introduction_variable_non_declaree_1.deca
// Description :
//introduction d'une variable non initialisée
//
// Resultats : 
// 	Erreur contextuelle 
//  Ligne 7 : "x n'a pas été déclarée"

{x;}